# WaxWatchApi

./: .dockerignore  .env.sample  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml  pull_request_template.md
alembic/: env.py
app/: main.py  tasks.py
docs/: DEPLOYMENT.md  EBAY_INTEGRATION_SETUP.md  FRONTEND_API_CONTRACT.md  OPERATIONS_OBSERVABILITY.md  PRODUCT_CHECKLIST.md  PROFILE_LIFECYCLE_POLICY.md  PROVIDER_ONBOARDING_CHECKLIST.md  openapi.snapshot.json
scripts/: api_contract_check.py  check_alembic_upgrade_target.py  check_change_surface.py  check_compose_secret_defaults.py  check_coverage_regression.py  check_env_sample.py  check_frontend_contract_sync.py  ci_celery_redis_smoke.sh  export_openapi.py  openapi_snapshot.py  schema_drift_check.py
tests/: conftest.py  test_auth.py  test_background_tasks.py  test_celery_redis_integration.py  test_celery_tasks.py  test_cors.py  test_db_base.py  test_dev_ingest.py  test_dev_rule_runner.py  test_discogs_integration_router.py  test_discogs_retry.py  test_ebay_affiliate.py  test_ebay_provider.py  test_email_provider.py  test_error_reporting.py  test_events.py  test_health.py  test_logging_contract.py  test_main_route_gating.py  test_matching.py  test_notifications.py  test_outbound_router.py  test_profile_router.py  (+12 more)
(+92 files in other folders)
